--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,7 @@
   "name": "example",
   "version": "1.0.0",
   "description": "",
+  "main": "index.html",
   "private": true,
   "scripts": {
     "serve": "webpack-dev-server --open"
@@ -11,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.7.8",
-    "draggable": "1.0.0"
+    "@monocode/draggable": "0.1.0"
   },
   "devDependencies": {
     "webpack": "^4.33.0",
